@@ -25,7 +25,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.polypheny.db.algebra.constant.MonikerType;
 import org.polypheny.db.algebra.type.AlgDataType;
 import org.polypheny.db.algebra.type.AlgDataTypeField;
@@ -74,7 +73,7 @@ public abstract class ListScope extends DelegatingScope {
      * @return list of child namespaces
      */
     public List<SqlValidatorNamespace> getChildren() {
-        return children.stream().map( scopeChild -> scopeChild.namespace ).collect( Collectors.toList() );
+        return children.stream().map( scopeChild -> scopeChild.namespace ).toList();
     }
 
 
@@ -84,7 +83,7 @@ public abstract class ListScope extends DelegatingScope {
      * @return list of child namespaces
      */
     List<String> getChildNames() {
-        return children.stream().map( scopeChild -> scopeChild.name ).collect( Collectors.toList() );
+        return children.stream().map( scopeChild -> scopeChild.name ).toList();
     }
 
 
